# mlops-dtu

./: index.html  pyproject.toml  requirements.txt
pages/faq/: index.html
pages/overview/: index.html
pages/projects/: index.html
pages/timeplan/: index.html
s10_extra/: index.html
s10_extra/documentation/: index.html
s10_extra/high_performance_clusters/: index.html
s10_extra/hyperparameters/: index.html
s1_development_environment/: index.html
s1_development_environment/command_line/: index.html
s1_development_environment/deep_learning_software/: index.html
s1_development_environment/editor/: index.html
s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb  checkpoint.pth
s1_development_environment/package_manager/: index.html
s2_organisation_and_version_control/: index.html
s2_organisation_and_version_control/cli/: index.html
s2_organisation_and_version_control/code_structure/: index.html
s2_organisation_and_version_control/code_structure_project/: README.md  index.html  pyproject.toml  tasks.py
s2_organisation_and_version_control/code_structure_project/dockerfiles/: api.dockerfile  train.dockerfile
s2_organisation_and_version_control/code_structure_project/docs/: index.html  mkdocs.yaml
s2_organisation_and_version_control/code_structure_project/docs/source/: index.html
s2_organisation_and_version_control/code_structure_project/src/code_structure/: model.py  train.py
s3_reproducibility/: index.html
s4_debugging_and_logging/: index.html
s5_continuous_integration/: index.html
s6_the_cloud/: index.html
s7_deployment/: index.html
s8_monitoring/: index.html
s9_scalable_applications/: index.html
search/: search_index.json
(+26 files in other folders)
